server/server.log

> api-voll_med@1.0.0 start
> tsc-watch --onSuccess "node ./build/server.js"

c19:31:10 - Starting compilation in watch mode...

src/auth/authEntity.ts[36m(3,36): error TS2835: [39mRelative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './IAutencavel.js'?
src/auth/verificaTokenJWT.ts[36m(3,27): error TS2835: [39mRelative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './roles.js'?
src/consultas/consultaEntity.ts[36m(2,26): error TS2835: [39mRelative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean '../pacientes/pacienteEntity.js'?
src/consultas/consultaEntity.ts[36m(3,30): error TS2835: [39mRelative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean '../especialistas/EspecialistaEntity.js'?

19:31:16 -[31m Found 4 errors. Watching for file changes.[39m
c19:32:12 - File change detected. Starting incremental compilation...

src/auth/verificaTokenJWT.ts[36m(3,27): error TS2835: [39mRelative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './roles.js'?
src/consultas/consultaEntity.ts[36m(2,26): error TS2835: [39mRelative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean '../pacientes/pacienteEntity.js'?
src/consultas/consultaEntity.ts[36m(3,30): error TS2835: [39mRelative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean '../especialistas/EspecialistaEntity.js'?

19:32:13 -[31m Found 3 errors. Watching for file changes.[39m
c09:27:49 - File change detected. Starting incremental compilation...


09:27:50 -[32m Found 0 errors. Watching for file changes.[39m
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::8080
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at Server.listen (node:net:2102:7)
    at app.listen (/home/jessica/Projetos/vollmed-qa-automation/server/node_modules/express/lib/application.js:635:24)
    at file:///home/jessica/Projetos/vollmed-qa-automation/server/build/server.js:57:5
    at ModuleJob.run (node:internal/modules/esm/module_job:413:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1976:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 8080
}

Node.js v24.12.0
c09:36:46 - File change detected. Starting incremental compilation...


09:36:47 -[32m Found 0 errors. Watching for file changes.[39m
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::8080
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at Server.listen (node:net:2102:7)
    at app.listen (/home/jessica/Projetos/vollmed-qa-automation/server/node_modules/express/lib/application.js:635:24)
    at file:///home/jessica/Projetos/vollmed-qa-automation/server/build/server.js:57:5
    at ModuleJob.run (node:internal/modules/esm/module_job:413:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1976:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 8080
}

Node.js v24.12.0
